<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Shopping Point</string>
    <string name="splash">Splash screen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="delete_account">Delete Account</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="new_customer_create_your_account">New Customer? <font color='#008CFF'>Create Your Account</font></string>
    <string name="_2020_shoppingpoint" />
    <string name="eight_characters">Password must be eight characters.</string>
    <string name="create_your_account">Sign up</string>
    <string name="sign_in_already_a_customer">Already a member?<font color='#008CFF'> Sign-in</font></string>
    <string name="enter_at_least_3_characters">Enter at least 3 characters</string>
    <string name="email_required">Email Required</string>
    <string name="enter_a_valid_email_address">Enter a valid email address</string>
    <string name="password_required">Password Required</string>
    <string name="password__at_least_8_characters">Password should be at least 8 characters</string>
    <string name="see_all">See All</string>
    <string name="mobile">Mobile</string>
    <string name="laptop">Laptop</string>
    <string name="product_image">Product Image</string>
    <string name="samsung_galaxy_a70">Samsung Galaxy A70</string>
    <string name="share_product">Share Product</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="_5399_rs">5399 INR</string>
    <string name="name_required">Name Required <font fgcolor = '#FF0000'>*</font></string>
    <string name="all_laptops">All Laptops</string>
    <string name="all_mobiles">All Mobiles</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="free_shipping">FREE Shipping</string>
    <string name="fulfilled_by_shopping_point">Fulfilled by Shoping Point</string>
    <string name="search">Search</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="cart">Cart</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="shoppingpoint.com">info@shopingpoint.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="share">Share</string>
    <string name="rate">Rate Us</string>
    <string name="communicate">Communicate</string>
    <string name="mobiles">Mobiles</string>
    <string name="laptops">Laptops</string>
    <string name="babies">Babies</string>
    <string name="toys">Toys</string>
    <string name="track_orders">Track Orders</string>
    <string name="my_account">My Account</string>
    <string name="news_feed">News Feed</string>
    <string name="my_wishList">My WishList</string>
    <string name="shopping_point">Shopping Point</string>
    <string name="take_picture">Take Picture</string>
    <string name="use_gallery">Use Gallery</string>
    <string name="choose_profile_picture">Choose profile Picture</string>
    <string name="my_orders">My orders</string>
    <string name="my_wishlist">My wishlist</string>
    <string name="languages">Languages</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="rate_us_on_play_store">Rate us on play store</string>
    <string name="help_center">FAQs</string>
    <string name="delete_my_account">Delete account</string>
    <string name="your_wishlist_is_empty">Your Wishlist is empty</string>
    <string name="an_empty_wishlist_does_not_look_good">An empty wishlist does not look good</string>
    <string name="add_product">Add Product</string>
    <string name="nameOfProduct">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="category">Category</string>
    <string name="image_of_product">Image Of Product</string>
    <string name="select_image">Select Image</string>
    <string name="save">Save</string>
    <string name="required_data">No null values are accepted</string>
    <string name="hi_how_can_we_help">Hi! How Can We Help You?</string>
    <string name="inquiryOne">I was charged extra shipping charges</string>
    <string name="answerOne">Shoping Point does not charge customers any extra shipping charges. All applicable charges are mentioned in the invoice. Please make sure to check the item price plus the shipping charges at the checkout page before completing your purchase.\n\nIf the courier representative demands or has charged you more than the amount mentioned on your order invoice, please contact Customer Service immediately for assistance.</string>
    <string name="inquiryTwo">Where is My Order?</string>
    <string name="answerTwo">Your order will be delivered by the expected date specified on your order. The expected delivery date is the date on or before which you can reasonably expect the item to arrive at your preferred shipping address.\n\nYou\'ll see an expected delivery date for each shipment on the order summary, just before you place your order. The expected delivery date will also appear in My Orders section of your account after you\'ve placed your order.</string>
    <string name="inquiryThree">Tracking Your Shipment</string>
    <string name="answerThree">Tracking your shipment is very easy on info@shopingpoint.com. You can use the link sent to you via SMS on your registered mobile phone number or on your registered email address to track where your order currently is. Additionally, you can also login to your info@shopingpoint.com account to track your orders as follows:\n\n1. Log in to info@shopingpoint.com account using your registered email address and password.\n\n2. Click on your name displayed on the top right-hand corner of the page.\n\n3. Click on My Order from the drop down menu.\n\n4. Locate your order on the screen.\n\n5. Click on Track Shipment against the shipment you want to know the status of.\n\n6. The pop-up screen will show where the order currently is along with a shipment tracking number for your reference.</string>
    <string name="inquiryFour">Item Was Not Available At The Designated Location</string>
    <string name="answerFour">If you have selected the option of Self-Pick Up for your order, then once the item has reached its designated hub or location, you will receive a confirmation SMS on the number provided in the order that the item is ready to be collected. Once the item is at its designated hub or location and the SMS notification is issued, the item will be available for collection for 4 working days. If you experience any problems collecting your item from the designated hub or location, please contact Customer Support for assistance.</string>
    <string name="inquiryFive">Why I got multiple shipments for same order?</string>
    <string name="answerFive">When you purchase products from different sellers in an order, each seller will have a separate shipment and the product or products from each seller will be delivered to you separately. If you want to have all of the items shipped in one shipment, you will have to place the order for all items from the same seller.</string>
    <string name="recently_viewed_items">Recently Viewed Items</string>
    <string name="all_removed">All Products removed from History</string>
    <string name="reviews">Reviews</string>
    <string name="write_review">Write Review</string>
    <string name="dateOfReview">7 Apr 2020</string>
    <string name="write_your_feedback_here">Write Your Feedback Here</string>
    <string name="submit">Submit</string>
    <string name="dummyRate">3.0/5</string>
    <string name="highestNumber">/5</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New Password</string>
    <string name="re_type_new_password">Re-type new password</string>
    <string name="cancel">Cancel</string>
    <string name="save_changes">Save Changes</string>
    <string name="text_length">150</string>
    <string name="password_not_match">Password Does not match</string>
    <string name="enter_current_password">Please Enter your current password</string>
    <string name="be_the_first_to_review_this_product">Be the first to review this product</string>
    <string name="free_returns">Free Returns</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="cash">Pay for your order in cash at the moment the shipment is delivered to your doorstep.</string>
    <string name="returnProduct">Changed your mind, you can return your product and get a full refund.</string>
    <string name="want_to_exit">Do you really want to exit?</string>
    <string name="ok">OK</string>
    <string name="create_account">Creating Account...</string>
    <string name="loading">Loading...</string>
    <string name="don_t_let_go_your_shopping_habit">Don\'t let go your shopping habit</string>
    <string name="your_cart_is_empty">Your Cart is empty</string>
    <string name="no_products_in_this_category">No products in this category</string>
    <string name="english">English</string>
    <string name="choose_language">Choose Language</string>
    <string name="shop_online">Shop Online</string>
    <string name="wishlist">WishList</string>
    <string name="password_assistance">Password assistance</string>
    <string name="enter_the_email_address_associated_with_your_account">Enter the email address associated with your account.</string>
    <string name="proceed">Continue</string>
    <string name="email_address">Email Address</string>
    <string name="authentication_required">Authentication Required</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="description2">For your security, we need to authenticate your request. We\'ve sent a code from <b>Shoping Point</b> to the email %1$s. Please enter it below.</string>
    <string name="enter_your_email">Please Enter your correct email</string>
    <string name="incorrect_code">Incorrect Code</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="counter">60</string>
    <string name="order_date">23-11-2020</string>
    <string name="status">Status</string>
    <string name="update">Update</string>
    <string name="about">About</string>
    <string name="desc3"><b>Developed by TeamShoppy - Pune, India</b></string>
    <string name="version">Version</string>
    <string name="check_update">Check for update</string>
    <string name="feedback">Feedback</string>
    <string name="desc_feedback">To report technical issues or suggest new features.</string>
    <string name="try_amp_buy_at_home"><font color='#008CFF'>Try </font>&amp;<font color='#008CFF'> Buy</font> at home.</string>
    <string name="desc_about">Shopping point application that gives you the facility of virual trial room.</string>
    <string name="check_updates">Tap here to check for updates.</string>
    <string name="version_build">Version 0.0.1 Build 1</string>
    <string name="help">Help</string>
    <string name="desc_feedback_link"><font color='#008CFF'>Click here </font></string>
    <string name="welcome_back">Welcome Back</string>
    <string name="we_missed_you_login_to_get_started">We missed you! Login to get started</string>
    <string name="login">Login</string>
</resources>