<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tool="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.LoginActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen160dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen160dp"
                android:background="@drawable/custom_back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="@dimen/dimen20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/welcome_back"
                android:textColor="#ffff"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/we_missed_you_login_to_get_started"
                android:textColor="#ffff"
                android:textSize="16sp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen30dp"
                android:layout_marginBottom="@dimen/dimen20dp"
                android:elevation="@dimen/dimen10dp"
                tool:cardCornerRadius="@dimen/dimen20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="582dp"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/login"
                        android:textColor="#00a5ff"
                        android:textSize="@dimen/dimen30sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen20dp"
                        android:text="@string/email"
                        android:textColor="#00a5ff" />

                    <EditText
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/dimen10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen20dp"
                        android:text="@string/password"
                        android:textColor="#00a5ff" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        tool:passwordToggleEnabled="true"
                        android:layout_marginTop="@dimen/dimen10dp"
                        android:layout_marginBottom="@dimen/dimen5dp"
                        tool:hintEnabled="false">


                        <EditText
                            android:hint="@string/password"
                            android:id="@+id/inputPassword"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:padding="@dimen/dimen5dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/forgetPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dimen20dp"
                        android:gravity="end"
                        android:layout_marginTop="@dimen/dimen10dp"
                        android:padding="@dimen/dimen10dp"
                        android:text="@string/forget_password"
                        android:textColor="#00a5ff"
                        android:textSize="@dimen/dimen14sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/buttonLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen24dp"
                        android:layout_marginTop="@dimen/dimen24dp"
                        android:layout_marginRight="@dimen/dimen24dp"
                        android:layout_marginBottom="@dimen/dimen24dp"
                        android:background="@drawable/custom_button_border2"
                        android:text="@string/sign_in"
                        android:textAllCaps="false"
                        android:textColor="#f0f0f0"
                        android:textSize="@dimen/dimen18sp" />

                    <TextView
                        android:id="@+id/textViewSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen10dp"
                        android:gravity="center"
                        android:text="@string/new_customer_create_your_account"
                        android:textSize="@dimen/dimen14sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen130dp"
                        android:gravity="center"
                        android:paddingStart="@dimen/dimen24dp"
                        android:paddingEnd="@dimen/dimen24dp"
                        android:text="@string/_2020_shoppingpoint"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen14sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</layout>
