<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen10dp"
        android:paddingBottom="@dimen/dimen15dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imgProductImage"
                android:layout_width="@dimen/dimen150dp"
                android:layout_height="@dimen/dimen150dp"
                android:layout_gravity="center"
                android:padding="@dimen/dimen15dp"
                android:layout_margin="@dimen/dimen10dp"
                android:contentDescription="@string/product_image"
                android:src="@drawable/samsung_galaxy_a70" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
          android:padding="@dimen/dimen10dp"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/orderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingStart="@dimen/dimen10dp"
                android:paddingEnd="@dimen/dimen10dp"
                android:textStyle="bold"
                android:maxLines="2"
                android:text="Product Name"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen20sp" />

            <TextView
                android:id="@+id/orderPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingStart="@dimen/dimen10dp"
                android:paddingEnd="@dimen/dimen10dp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen18sp" />
            <TextView
                android:id="@+id/orderStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/dimen20sp"
                android:paddingStart="@dimen/dimen10dp"
                android:paddingEnd="@dimen/dimen10dp"
                android:text="@string/status"
                android:textColor="@color/darkGreen"
                 />
            <TextView
                android:id="@+id/orderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingStart="@dimen/dimen10dp"
                android:paddingEnd="@dimen/dimen10dp"
                android:text="@string/order_date"
                android:textColor="@color/dark"
                android:textSize="@dimen/dimen18sp" />

        </LinearLayout>
    </LinearLayout>
</layout>