<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="210dp"
        android:layout_height="450dp"
        card_view:cardCornerRadius="@dimen/dimen5dp"
        card_view:cardElevation="@dimen/dimen5dp"
        card_view:cardUseCompatPadding="true"
        card_view:elevation="@dimen/dimen1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginStart="@dimen/dimen5dp"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgFavourite"
                android:layout_width="@dimen/dimen30dp"
                android:layout_height="@dimen/dimen30dp"
                android:layout_marginEnd="@dimen/dimen5dp"
                android:layout_marginTop="@dimen/dimen10dp"
                android:layout_gravity="end"
                android:contentDescription="@string/add_to_favourite"
                android:src="@drawable/ic_favorite_border" />

            <ImageView
                android:id="@+id/imgProductImage"
                android:layout_width="@dimen/dimen100dp"
                android:layout_height="@dimen/dimen100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/product_image"
                android:src="@drawable/samsung_galaxy_a70" />

            <TextView
                android:id="@+id/txtProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen10dp"
              android:layout_marginEnd="@dimen/dimen5dp"
                android:layout_marginTop="@dimen/dimen70dp"
                android:ellipsize="end"
                android:textStyle="bold"
                android:maxLines="1"
                android:text="@string/samsung_galaxy_a70"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen18sp" />

            <TextView
                android:id="@+id/Rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtProductDesc"
                android:layout_marginLeft="10dp"

                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/imgProductImage"
                android:background="#2BCC7C"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="@dimen/dimen1dp"
                android:paddingBottom="@dimen/dimen1dp"

                android:text="4.7"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/DescofProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen10dp"
                android:layout_marginStart="@dimen/dimen10dp"
                android:background="@color/white"
                android:maxLines="1"
                android:textColor="@color/dark"

                tools:text="Apple iPhone 7 plus without Facetime - 32GB, 4LTC, Silver" />

            <TextView
                android:id="@+id/txtProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen10dp"

                android:layout_marginTop="@dimen/dimen10dp"
                android:text="@string/_5399_rs"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen10dp"
                android:layout_marginTop="@dimen/dimen10dp"
                android:text="@string/free_shipping"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen16sp"
                android:textStyle="bold" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen20dp"

                android:layout_marginEnd="@dimen/dimen1dp"
                android:layout_marginStart="@dimen/dimen1dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addToCart"
                    android:layout_width="115dp"
                    android:layout_height="@dimen/dimen30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dimen5dp"
                    android:background="@color/green"
                    android:text="@string/add_to_cart"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="13sp" />

                <ImageView
                    android:id="@+id/imgCart"
                    android:layout_width="@dimen/dimen30dp"
                    android:layout_height="@dimen/dimen30dp"
                    android:layout_marginStart="@dimen/dimen20dp"

                    android:layout_marginEnd="@dimen/dimen24dp"
                    android:contentDescription="@string/add_to_cart"
                    android:src="@drawable/ic_add_shopping_cart" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
